<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="72dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:text="@string/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gadgetName_reservation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:textColor="@color/accent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:paddingTop="36dp">

        <TextView
            android:text="@string/reservation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textRes"
            android:layout_column="0"
            android:layout_row="0"
            android:width="120dp" />

        <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resdate"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:text="@string/waiting_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textReturn"
            android:layout_column="0"
            android:layout_row="1"
            android:width="120dp"
            android:paddingTop="8dp" />

        <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/watingposition"
            android:layout_column="1"
            android:layout_row="1" />

    </GridLayout>


    <TextView
        android:text="@string/ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView3"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxReady"
        android:checked="false"
        android:clickable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>