<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="72dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">


    <TextView
        android:text="@string/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gadgetName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:textColor="@color/accent" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:paddingTop="36dp">

        <TextView
            android:text="@string/pickup_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPick"
            android:layout_column="0"
            android:layout_row="0"
            android:width="120dp" />

        <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickupdate"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:text="@string/return_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textReturn"
            android:layout_column="0"
            android:layout_row="1"
            android:width="120dp"
            android:paddingTop="8dp" />

        <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/returndate"
            android:layout_column="1"
            android:layout_row="1" />

    </GridLayout>

</RelativeLayout>