<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/NewReservation"
    android:layout_height="wrap_content"
    android:minHeight="72dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:text="@string/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gadgetName_NewReservation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:textColor="@color/accent" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/NewReservation56"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:text="@string/inventory_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textNumber_NewReservation"
                android:layout_weight="1"
                android:width="120dp" />

            <TextView
                android:text="@string/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/InventoryNumber_NewReservation"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/NewReservation12"
            android:layout_marginTop="0dp">

            <TextView
                android:text="@string/condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textCondition_NewReservation"
                android:layout_weight="1"
                android:width="120dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Condition_NewReservation"
                android:layout_weight="1"
                android:textAlignment="textStart"
                android:text="@string/textview" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/NewReservation34"
            android:layout_marginTop="0dp">

            <TextView
                android:text="@string/manufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textManufactur_NewReservation"
                android:layout_weight="1"
                android:width="120dp" />

            <TextView
                android:text="@string/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Manufacturer_NewReservation"
                android:layout_weight="1"
                android:textAlignment="textStart" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>